--- a/index.html
+++ b/index.html
@@ -1,10 +1,53 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello</title>
+    <title>Technology Initiative</title>
     <meta charset = "utf-8" />
+    <link href = "https://fonts.googleapis.com/css?family=Roboto:500" rel = "stylesheet" type = "text/css">
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        font-family: "Roboto", sans-serif;
+        font-size: 30px;
+      }
+      #main {
+        border-collapse: collapse;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+      }
+      #main tr, #main td {
+        height: 100%;
+        width: 100%;
+      }
+      #content {
+        width: 500px;
+        margin: auto;
+        text-align: justify;
+      }
+      .down {
+        margin-top: 15px;
+        text-align: left;
+      }
+      a:link {
+        text-decoration: none;
+        color: #93a6c1 !important;
+      }
+      a:visited {
+        color: #5a5575;
+      }
+    </style>
   </head>
   <body>
-    Hello, world!
+    <table id = "main"><tr><td>
+      <div id = "content">
+        Hi there! Please join us for an introductory meeting on Tuesday, October 27. We'll be meeting in room 103 immediately after school.
+        <br>
+        <div class = "down">Questions? Feel free to say <a href = "mailto:hello@cottonwoodti.org">hello@cottonwoodti.org</a>!</div>
+      </div>
+    </td></tr></table>
   </body>
 </html>
